<resources>
    <string name="app_name">APP-STOCK-MANAGEMENT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Stock management</string>
    <string name="nav_header_subtitle">nume restaurant</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_stock_product_name">Product name</string>
    <string name="add_stock_product_quantity">Product quantity</string>
    <string name="add_stock_product_price">Product price</string>
    <string name="add_stock_category">Category:</string>
    <string name="add_stock_btn_save">Save</string>
    <string name="add_name_error_message">Invalid name. Minim 3 characters</string>
    <string name="add_quantity_error_message">Invalid quantity!</string>
    <string name="add_price_error_message">Invalid price!</string>
    <string name="element_picture">Element picture</string>

    <string name="row_category_template">-%1$s-</string>
    <string name="row_price_template">€%1$s</string>
    <string name="lv_row_product_name">Product Name</string>
    <string name="lv_row_product_category">- Product Category -</string>
    <string name="lv_row_product_price">Product Price</string>
    <string name="lv_row_product_quantity">Product Quantity</string>

    <string name="chart_legend_template">%1$s - %2$d</string>

    <string-array name="add_category_values">
        <item>Food</item>
        <item>Beverage</item>
        <item>Other</item>
    </string-array>
</resources>